tests/type-errors/general/immutable_reference_assignment.cx
int write(int* ptr) {
    const int& value = *ptr;
    value = 3;
    return value;
}
